--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -23,6 +23,9 @@ jobs:
 
       - name: Verify the Java Version
         run: java --version
+        
+      - name: Verify the Dir
+        run: ls
 
       - name:  Wrapper Spring-boot
         run: mvnw.cmd package
