--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -9,7 +9,7 @@ on:
 jobs:
   build:
     name: Build Ali's King
-    runs-on: ubuntu-18.04
+    runs-on: windows 10
     steps:
       - name: Download the Source Code
         uses: actions/checkout@v3
@@ -25,10 +25,10 @@ jobs:
         run: java --version
         
       - name: Verify the Dir
-        run: ls
+        run: dir
 
       - name:  Wrapper Spring-boot
-        run: mvnw.sh package
+        run: mvnw.cmd package
 
 
 #       - name: Zip the Public folder as public.zip
