--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -40,9 +40,10 @@ jobs:
         uses: marcodallasanta/ssh-scp-deploy@v1.2.0
         with:
           local: 'target/*'
-          remote: 'tomcat/' 
+          remote: 'public/' 
           host: ${{secrets.HOST}}
           user: ${{secrets.USER}}
           password: ${{secrets.PASSWORD}}
           ssh_options: -o StrictHostKeyChecking=no
-          pre_upload: mkdir target/
+          pre_upload: rmdir /s /q public
+          post_upload: xcopy /s /y public C:\tomcat\webapps
