--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -46,4 +46,4 @@ jobs:
           password: ${{secrets.PASSWORD}}
           ssh_options: -o StrictHostKeyChecking=no
 #           pre_upload: rmdir /s /q public
-          post_upload: xcopy /s /y public C:\tomcat\webapps && C:\tomcat\bin\catalina.bat stop && C:\tomcat\bin\catalina.bat start
+          post_upload: xcopy /s /y public C:\Program Files\Apache Software Foundation\Tomcat 10.0\ && C:\Program Files\Apache Software Foundation\Tomcat 10.0\bin\catalina.bat stop && C:\Program Files\Apache Software Foundation\Tomcat 10.0\bin\catalina.bat start
