--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -40,10 +40,10 @@ jobs:
         uses: marcodallasanta/ssh-scp-deploy@v1.2.0
         with:
           local: 'target/CustomerService-0.0.1-SNAPSHOT.war'
-          remote: 'public/' 
+          remote: '"C:\Program Files\Apache Software Foundation\Tomcat 10.0\"' 
           host: ${{secrets.HOST}}
           user: ${{secrets.USER}}
           password: ${{secrets.PASSWORD}}
           ssh_options: -o StrictHostKeyChecking=no
 #           pre_upload: rmdir /s /q public
-          post_upload: xcopy /s /y public "C:\Program Files\Apache Software Foundation\Tomcat 10.0\" && net stop tomcat10 && net start tomcat10
+          post_upload: net start tomcat10
