--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -40,7 +40,7 @@ jobs:
         uses: marcodallasanta/ssh-scp-deploy@v1.2.0
         with:
           local: 'target/CustomerService-0.0.1-SNAPSHOT.war'
-          remote: '"C:\Program Files\Apache Software Foundation\Tomcat 10.0\"' 
+          remote: 'C:\Program Files\Apache Software Foundation\Tomcat 10.0\' 
           host: ${{secrets.HOST}}
           user: ${{secrets.USER}}
           password: ${{secrets.PASSWORD}}
