--- a/.github/workflows/TomcatConf.yaml
+++ b/.github/workflows/TomcatConf.yaml
@@ -46,4 +46,4 @@ jobs:
           password: ${{secrets.PASSWORD}}
           ssh_options: -o StrictHostKeyChecking=no
           pre_upload: rmdir /s /q "C:\Program Files\Apache Software Foundation\Tomcat 10.0\webapps\CS" && mkdir "C:\Program Files\Apache Software Foundation\Tomcat 10.0\webapps\CS"
-          post_upload: net start tomcat10
+          post_upload: net stop tomcat10 &&  net start tomcat10
